--- a/generate/static/LoginKit/Authenticate.html
+++ b/generate/static/LoginKit/Authenticate.html
@@ -5,18 +5,18 @@
 <!--[if IE 8]>          <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-<title>IOS - mStage.io</title>
+<title>Authenticate - mStage.io</title>
 <meta content="Documentation for UserKit and LoginKit SDK" name="description"/>
 <meta content="I, Me &amp; Myself" name="author">
 <meta charset="utf-8">
-<link href="../../themes/daux/img/favicon-blue.png" rel="icon" type="image/x-icon">
+<link href="../themes/daux/img/favicon-blue.png" rel="icon" type="image/x-icon">
 <!-- Mobile -->
 <meta content="yes" name="apple-mobile-web-app-capable"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <!-- Font -->
 <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&amp;subset=latin,cyrillic-ext,cyrillic" rel="stylesheet" type="text/css">
 <!-- CSS -->
-<link href="../../themes/daux/css/theme-blue.min.css" rel="stylesheet" type="text/css">
+<link href="../themes/daux/css/theme-blue.min.css" rel="stylesheet" type="text/css">
 <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -36,7 +36,7 @@
 </div>
 <div class="Collapsible__content">
 <!-- Navigation -->
-<ul class="Nav"><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>UserKit</a><ul class="Nav"><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Getting Started</a><ul class="Nav"><li class="Nav__item "><a href="../../UserKit/Getting_Started/Android.html">Android</a></li><li class="Nav__item Nav__item--active"><a href="../../UserKit/Getting_Started/IOS.html">IOS</a></li></ul></li></ul></li><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>LoginKit</a><ul class="Nav"><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Getting Started</a><ul class="Nav"><li class="Nav__item "><a href="../../LoginKit/Getting_Started/Android.html">Android</a></li></ul></li><li class="Nav__item "><a href="../../LoginKit/Authenticate.html">Authenticate</a></li><li class="Nav__item "><a href="../../LoginKit/Affilate_Partner.html">Affilate Partner</a></li></ul></li></ul>
+<ul class="Nav"><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>UserKit</a><ul class="Nav"><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Getting Started</a><ul class="Nav"><li class="Nav__item "><a href="../UserKit/Getting_Started/Android.html">Android</a></li><li class="Nav__item "><a href="../UserKit/Getting_Started/IOS.html">IOS</a></li></ul></li></ul></li><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>LoginKit</a><ul class="Nav"><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Getting Started</a><ul class="Nav"><li class="Nav__item "><a href="../LoginKit/Getting_Started/Android.html">Android</a></li></ul></li><li class="Nav__item Nav__item--active"><a href="../LoginKit/Authenticate.html">Authenticate</a></li><li class="Nav__item "><a href="../LoginKit/Affilate_Partner.html">Affilate Partner</a></li></ul></li></ul>
 <div class="Links">
 <hr/>
 <a href="/sdk-doc/generate/android-source" target="_blank">Android API Reference</a>
@@ -55,43 +55,21 @@
 <div class="doc_content">
 <article class="Page">
 <div class="Page__header">
-<h1><a href="../../UserKit/Getting_Started/Android.html">UserKit</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../../UserKit/Getting_Started/Android.html">Getting Started</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../../UserKit/Getting_Started/IOS.html">IOS</a></h1>
+<h1><a href="../LoginKit/Authenticate.html">LoginKit</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../LoginKit/Authenticate.html">Authenticate</a></h1>
 <span style="float: left; font-size: 10px; color: gray;">
-            Monday, December 26, 2016 6:22 PM        </span>
+            Wednesday, December 28, 2016 2:45 AM        </span>
 <span style="float: right; font-size: 10px; color: gray;">
-<a href="https://github.com/khang-nt/sdk-doc/blob/master/docs/00_UserKit/00_Getting_Started/01_IOS.md" target="_blank">Edit on GitHub</a>
+<a href="https://github.com/khang-nt/sdk-doc/blob/master/docs/01_LoginKit/01_Authenticate.md" target="_blank">Edit on GitHub</a>
 </span>
 </div>
 <div class="s-content">
-<h1 id="page_Installation">Installation</h1>
-<hr/>
-<h4 id="page_CocoaPods">CocoaPods</h4>
-<ul class='tab'>
-<li><a href="javascript:void(0)" class="tablinks tl0 default_open" onclick="openTab(event, 'tc0', 'ios0', 'tl0')">IOS</a></li></ul>
-<div id='ios0' class='tabcontent tc0'>
-<pre><code class="language-swift">pod 'UserKit', :git =&gt; 'https://github.com/iamkaiwei/userkit-iOS-SDK.git'
+<h2 id="page_Sign_up_new_account">Sign up new account</h2>
+<pre><code>
 </code></pre>
-</div>
-
-<h4 id="page_Manual_Installion">Manual Installion</h4>
-<p>Simply drag UserKit project as a subproject to X-Code</p>
-<h1 id="page_Initialization">Initialization</h1>
-<hr/>
-<ul class='tab'>
-<li><a href="javascript:void(0)" class="tablinks tl1 default_open" onclick="openTab(event, 'tc1', 'ios1', 'tl1')">IOS</a></li></ul>
-<div id='ios1' class='tabcontent tc1'>
-<pre><code class="language-swift">func application(application: UIApplication, didFinishLaunchingWithOptions launchOptions: [NSObject: AnyObject]?) -&gt; Bool {
-    UserKit.initialize("YOUR_USERKIT_TOKEN")
-    return true
-}
-
-</code></pre>
-</div>
-
 </div>
 <nav>
 <ul class="Pager">
-<li class="Pager--prev"><a href="../../UserKit/Getting_Started/Android.html">Previous</a></li> <li class="Pager--next"><a href="../../LoginKit/Getting_Started/Android.html">Next</a></li> </ul>
+<li class="Pager--prev"><a href="../LoginKit/Getting_Started/Android.html">Previous</a></li> <li class="Pager--next"><a href="../LoginKit/Affilate_Partner.html">Next</a></li> </ul>
 </nav>
 </article>
 </div>
@@ -99,11 +77,11 @@
 </div>
 </div>
 <!-- jQuery -->
-<script src="../../themes/daux/js/jquery-1.11.3.min.js"></script>
+<script src="../themes/daux/js/jquery-1.11.3.min.js"></script>
 <!-- hightlight.js -->
-<script src="../../themes/daux/js/highlight.pack.js"></script>
+<script src="../themes/daux/js/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <!-- JS -->
-<script src="../../themes/daux/js/daux.js"></script>
+<script src="../themes/daux/js/daux.js"></script>
 <script>function openTab(evt,tab_content,active_id,tab_links){var i,tabcontent,tablinks;tabcontent=document.getElementsByClassName(tab_content);for(i=0;i<tabcontent.length;i++){tabcontent[i].style.display='none'}tablinks=document.getElementsByClassName(tab_links);for(i=0;i<tablinks.length;i++){tablinks[i].className=tablinks[i].className.replace(' active','')}document.getElementById(active_id).style.display='block';evt.currentTarget.className+=' active'};for(default_open_list=document.getElementsByClassName('default_open'),i=0;i<default_open_list.length;i++)default_open_list[i].click();</script></body>
 </html>
