--- a/generate/static/LoginKit/Getting_Started/Android.html
+++ b/generate/static/LoginKit/Getting_Started/Android.html
@@ -36,7 +36,7 @@
 </div>
 <div class="Collapsible__content">
 <!-- Navigation -->
-<ul class="Nav"><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>UserKit</a><ul class="Nav"><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Getting Started</a><ul class="Nav"><li class="Nav__item "><a href="../../UserKit/Getting_Started/Android.html">Android</a></li><li class="Nav__item "><a href="../../UserKit/Getting_Started/IOS.html">IOS</a></li></ul></li></ul></li><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>LoginKit</a><ul class="Nav"><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Getting Started</a><ul class="Nav"><li class="Nav__item Nav__item--active"><a href="../../LoginKit/Getting_Started/Android.html">Android</a></li></ul></li><li class="Nav__item "><a href="../../LoginKit/Affilate_Partner.html">Affilate Partner</a></li></ul></li></ul>
+<ul class="Nav"><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>UserKit</a><ul class="Nav"><li class="Nav__item has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Getting Started</a><ul class="Nav"><li class="Nav__item "><a href="../../UserKit/Getting_Started/Android.html">Android</a></li><li class="Nav__item "><a href="../../UserKit/Getting_Started/IOS.html">IOS</a></li></ul></li></ul></li><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>LoginKit</a><ul class="Nav"><li class="Nav__item Nav__item--open has-children"><a class="aj-nav folder" href="#"><i class="Nav__arrow"> </i>Getting Started</a><ul class="Nav"><li class="Nav__item Nav__item--active"><a href="../../LoginKit/Getting_Started/Android.html">Android</a></li></ul></li><li class="Nav__item "><a href="../../LoginKit/Authenticate.html">Authenticate</a></li><li class="Nav__item "><a href="../../LoginKit/Affilate_Partner.html">Affilate Partner</a></li></ul></li></ul>
 <div class="Links">
 <hr/>
 <a href="/sdk-doc/generate/android-source" target="_blank">Android API Reference</a>
@@ -55,9 +55,9 @@
 <div class="doc_content">
 <article class="Page">
 <div class="Page__header">
-<h1><a href="../../LoginKit/Affilate_Partner.html">LoginKit</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../../LoginKit/Getting_Started/Android.html">Getting Started</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../../LoginKit/Getting_Started/Android.html">Android</a></h1>
+<h1><a href="../../LoginKit/Authenticate.html">LoginKit</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../../LoginKit/Getting_Started/Android.html">Getting Started</a> <svg class="Page__header--separator" viewbox="0 0 477.175 477.175" xmlns="http://www.w3.org/2000/svg"><path d="M360.73 229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1 0s-5.3 13.8 0 19.1l215.5 215.5-215.5 215.5c-5.3 5.3-5.3 13.8 0 19.1 2.6 2.6 6.1 4 9.5 4 3.4 0 6.9-1.3 9.5-4l225.1-225.1c5.3-5.2 5.3-13.8.1-19z"></path></svg> <a href="../../LoginKit/Getting_Started/Android.html">Android</a></h1>
 <span style="float: left; font-size: 10px; color: gray;">
-            Wednesday, December 28, 2016 2:42 AM        </span>
+            Wednesday, December 28, 2016 2:51 AM        </span>
 <span style="float: right; font-size: 10px; color: gray;">
 <a href="https://github.com/khang-nt/sdk-doc/blob/master/docs/01_LoginKit/00_Getting_Started/Android.md" target="_blank">Edit on GitHub</a>
 </span>
@@ -98,10 +98,23 @@ dependencies {
 </code></pre>
 <h1 id="page_Basic_tutorials">Basic tutorials</h1>
 <hr/>
-<h2 id="page_Java_concurrency_support_using_RxJava2">Java concurrency support using RxJava2:</h2>
+<h2 id="page_Logging">Logging</h2>
+<p>Logging is disabled by default. To show/hide logs of <code>LoginKit</code>, just add some lines to your code:</p>
 <ul class='tab'>
 <li><a href="javascript:void(0)" class="tablinks tl0 default_open" onclick="openTab(event, 'tc0', 'android0', 'tl0')">Android</a></li></ul>
 <div id='android0' class='tabcontent tc0'>
+<pre><code class="language-java">// import userkit.sdk.identity.Logging;
+    // show log
+    Logging.enable();
+    // hide log
+    Logging.disable();
+</code></pre>
+</div>
+
+<h2 id="page_Java_concurrency_support_using_RxJava2">Java concurrency support using RxJava2:</h2>
+<ul class='tab'>
+<li><a href="javascript:void(0)" class="tablinks tl1 default_open" onclick="openTab(event, 'tc1', 'android1', 'tl1')">Android</a></li></ul>
+<div id='android1' class='tabcontent tc1'>
 <pre><code class="language-java">void doResetPassword(String email) {
     LoginKit.getInstance().resetPassword(email)
         .subscribeOn(Schedulers.io())
@@ -116,8 +129,8 @@ dependencies {
 <p>If you don't like <code>Observer</code> pattern, you can easily define callback functions
 which was designed to friendly with Java 8 Lambda expression:</p>
 <ul class='tab'>
-<li><a href="javascript:void(0)" class="tablinks tl1 default_open" onclick="openTab(event, 'tc1', 'android1', 'tl1')">Android</a></li></ul>
-<div id='android1' class='tabcontent tc1'>
+<li><a href="javascript:void(0)" class="tablinks tl2 default_open" onclick="openTab(event, 'tc2', 'android2', 'tl2')">Android</a></li></ul>
+<div id='android2' class='tabcontent tc2'>
 <pre><code class="language-java">void doResetPassword(String email) {
     LoginKit.getInstance().resetPassword(email,
         () -&gt; Toast.makeText(this, "Reset password success", Toast.LENGTH_SHORT).show(),
@@ -134,7 +147,7 @@ which was designed to friendly with Java 8 Lambda expression:</p>
 </div>
 <nav>
 <ul class="Pager">
-<li class="Pager--prev"><a href="../../UserKit/Getting_Started/IOS.html">Previous</a></li> <li class="Pager--next"><a href="../../LoginKit/Affilate_Partner.html">Next</a></li> </ul>
+<li class="Pager--prev"><a href="../../UserKit/Getting_Started/IOS.html">Previous</a></li> <li class="Pager--next"><a href="../../LoginKit/Authenticate.html">Next</a></li> </ul>
 </nav>
 </article>
 </div>
